MC-9407 Fix spacing of model detail elements

--- a/src/app/model-detail/model-detail.component.scss
+++ b/src/app/model-detail/model-detail.component.scss
@@ -15,5 +15,15 @@
  */
 
  .mdm-model-detail__row {
-     margin: 8px 0px;
+     margin: 4px 0px;
+
+     h4 {
+         margin-left: 8px;
+     }
+
+     small {
+         strong {
+             padding: 0px 4px;
+         }
+     }
  }
